--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "dependencies": {
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-hot-loader": "^4.3.12",
+    "react-mt-svg-lines": "^0.9.0",
+    "react-router-dom": "^4.3.1",
+    "react-router-scroll-top": "^0.1.1",
+    "react-scripts": "2.1.1",
+    "reactstrap": "^6.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
