--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-hot-loader": "^4.3.12",
+    "react-mail-form": "^1.0.2",
     "react-mt-svg-lines": "^0.9.0",
     "react-router-dom": "^4.3.1",
     "react-router-scroll-top": "^0.1.1",
